--- a/index.html
+++ b/index.html
@@ -31,6 +31,139 @@
           <span>MENU</span>
         </button>
       </header>
+      <main class="main">
+        <section class="sc-brand">
+          <h2 class="blind">CRÉER DES MARQUES QUI PERCUTENT</h2>
+          <div class="inner">
+            <div data-theme="green" class="col-1">
+              <h3 class="logo-full">
+                <a href="">
+                  <img src="./assets/img/logoFull.svg" alt>
+                </a>
+              </h3>
+              <div class="txt">
+                <div class="t-1">
+                  CRÉER DES
+                </div>
+                <div class="t-2">
+                  <span>MARQUES</span>
+                  <span>
+                    <i class="ico-down">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 62 62" fill="none">
+                        <rect x="27.6309" width="6.26295" height="57.1034" fill="#003D31" />
+                        <rect x="35.4287" y="57.5713" width="6.26295" height="43.8406"
+                          transform="rotate(135 35.4287 57.5713)" fill="#003D31" />
+                        <rect x="31" y="62" width="6.26295" height="43.8406" transform="rotate(-135 31 62)"
+                          fill="#003D31" />
+                      </svg>
+                    </i>
+                  </span>
+                  <span>QUI</span>
+                </div>
+                <div class="t-3">PERCUTENT</div>
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="img-box">
+                <figure class="img1">
+                  <img src="./assets/img/hero_1.png" alt>
+                </figure>
+                <div class="img2">
+                  <video autoplay loop playsinline muted>
+                    <source src="./assets/video/hero2.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <figure class="img3">
+                  <img src="./assets/img/st.jpg" alt>
+                </figure>
+              </div>
+              <div class="fixed-1">
+                <div class="txt">
+                  <div class="t-1">
+                    CRÉER DES
+                  </div>
+                  <div class="t-2">
+                    <span>MARQUES</span>
+                    <span></span>
+                    <span>QUI</span>
+                  </div>
+                  <div class="t-3">PERCUTENT</div>
+                </div>
+              </div>
+              <div class="fixed-2">
+                <div class="txt">
+                  <div class="t-1">
+                    CRÉER DES
+                  </div>
+                  <div class="t-2">
+                    <span>MARQUES</span>
+                    <span></span>
+                    <span>QUI</span>
+                  </div>
+                  <div class="t-3">PERCUTENT</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="inner">
+          <p class="txt">Ça se passe<br>par ici</p>
+          <div class="img-box">
+            <span class="arrow-down">
+              <svg fill="none" height="192" viewBox="0 0 6 192" width="6" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="m3.00001 191.709 2.1795-3.775h-4.358999zm-.37751-191.000016.00001 187.602016h.755l-.00001-187.602016z"
+                  fill="#001713"></path>
+              </svg>
+            </span>
+            <span class="circle">
+              <svg width="214" height="130" viewBox="0 0 214 130" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path id="circle"
+                  d="M171 65.209C171 100.831 142.122 129.709 106.5 129.709C70.8776 129.709 42 100.831 42 65.209C42 29.5866 70.8776 0.708984 106.5 0.708984C142.122 0.708984 171 29.5866 171 65.209Z"
+                  fill="#F0FF3D"></path>
+                <path id="logo"
+                  d="M122.299 34.8224V4C61.1428 4 61.1429 38.4924 0 38.4924V127C48.7798 127 58.6455 105.049 91.7005 96.1776V127C152.857 127 152.857 92.5076 214 92.5076V4C165.22 4 155.354 25.951 122.299 34.8224Z"
+                  fill="#F0FF3D"></path>
+              </svg>
+            </span>
+          </div>
+          <p class="huge">
+            <span class="letter3">B</span>
+            <span class="letter2">r</span>
+            <span class="letter1">i</span>
+            <span class="">e</span>
+            <span class="letter2">f</span>
+            <span class="letter3">e</span>
+            <span class="letter1">z</span>
+            <span>-</span>
+            <span class="letter1">n</span>
+            <span class="letter3">o</span>
+            <span>u</span>
+            <span class="letter1">s</span>
+          </p>
+          <div class="address">
+            <address class="flex">
+              <div class="sns">
+                <a href="" target="_blank"><img src="./img/twitter.svg" class="ico-twitter"></img></a>
+                <a href="" target="_blank"><img src="./img/instagram.svg" class="ico-insta"></img></a>
+                <a href="" target="_blank"><img src="./img/linkedin.svg" class="ico-linked"></img></a>
+                <a href="" target="_blank"><img src="./img/facebook.svg" class="ico-face"></img></a>
+              </div>
+              <a href="mailto:hello@vendredi-society.fr">
+                hello@vendredi-society.fr
+              </a>
+              <a href="tel:+33 (0)6 68 70 73 72">
+                +33 (0)6 68 70 73 72
+              </a>
+            </address>
+            <button class="btn-top">
+              Back to top
+            </button>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </body>
