240624_portfolio project(VendrdiSociety)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div data-theme="green" class="col-1">
               <h3 class="logo-full">
                 <a href="">
-                  <img src="./assets/img/logoFull.svg" alt>
+                  <img src="./img/logoFull.svg" alt>
                 </a>
               </h3>
               <div class="txt">
@@ -66,15 +66,15 @@
             <div class="col-2">
               <div class="img-box">
                 <figure class="img1">
-                  <img src="./assets/img/hero_1.png" alt>
+                  <img src="./img/hero_1.png" alt>
                 </figure>
                 <div class="img2">
                   <video autoplay loop playsinline muted>
-                    <source src="./assets/video/hero2.mp4" type="video/mp4">
+                    <source src="./video/hero2.mp4" type="video/mp4">
                   </video>
                 </div>
                 <figure class="img3">
-                  <img src="./assets/img/st.jpg" alt>
+                  <img src="./img/st.jpg" alt>
                 </figure>
               </div>
               <div class="fixed-1">
@@ -104,6 +104,92 @@
                 </div>
               </div>
             </div>
+          </div>
+        </section>
+        <section class="sc-digital">
+          <div data-theme="green" class="fixed">
+            <div class="col">
+              <h2 class="desc">
+                Et des expériences digitales ultra-fluides, pour ceux qui aiment avoir un coup d'avance.
+              </h2>
+            </div>
+          </div>
+        </section>
+        <section data-theme="green" class="sc-garder">
+          <div class="fixed">
+            <div class="inner">
+              <h2 class="txt">ET LE GARDER.</h2>
+              <div class="bg">
+                <svg class="ell" fill="none" height="424" viewBox="0 0 762 424" width="762"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m761.5 212c0 58.278-42.459 111.144-111.335 149.469-68.86 38.316-164.023 62.031-269.165 62.031s-200.305-23.715-269.165-62.031c-68.8763-38.325-111.335-91.191-111.335-149.469 0-58.279 42.4587-111.145 111.335-149.4702 68.86-38.3158 164.023-62.030288 269.165-62.030288s200.305 23.714488 269.165 62.030288c68.876 38.3252 111.335 91.1912 111.335 149.4702z"
+                    opacity=".2" stroke="#fff"></path>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="sc-intro">
+          <div data-theme="white" class="inner">
+            <h2 class="txt">
+              Dans un monde qui change chaque jour et qui n’attend pas, notre modèle vous permet d’être vif.
+            </h2>
+            <div class="flex-inner">
+              <div class="video">
+                <div class="view">
+                  <button class="btn-play" type="button">
+                    <i class="ico-play">
+                      <svg class="a" fill="none" height="63" viewBox="0 0 63 63" width="63"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="m63 31.5c0 17.397-14.103 31.5-31.5 31.5s-31.5-14.103-31.5-31.5 14.103-31.5 31.5-31.5 31.5 14.103 31.5 31.5z"
+                          fill="#f0ff3d"></path>
+                        <path d="m26 39v-16l13 8z" fill="#002921"></path>
+                      </svg>
+                    </i>
+                  </button>
+                  <video>
+                    <source src="./video/thumbnail.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <p class="desc">Play showreel</p>
+              </div>
+              <p class="desc">
+                VOTRE ÉQUIPE EST COMPOSÉE SUR MESURE, POUR AVOIR LE PLUS D’IMPACT. UNIQUEMENT AVEC DES TALENTS POINTUS.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section data-theme="dark" class="sc-push">
+          <div class="inner">
+            <h2>Les derniers projets<br> toujours faits main</h2>
+            <h3>{&nbsp;&nbsp;&nbsp;dans la main&nbsp;&nbsp;&nbsp;}</h3>
+            <div class="bg">
+              <figure class="line1"><img src="./img/ellipseHori.svg"></figure>
+              <figure class="line2"><img src="./img/ellipseHori.svg"></figure>
+              <figure class="line3"><img src="./img/ellipseHori.svg"></figure>
+            </div>
+            <button class="btn-pop-1">
+              <div class="box">
+                <div class="view">
+                  <video muted autoplay loop playsinline>
+                    <source src="./video/loop.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <span class="letter">Wilbi</span>
+              </div>
+            </button>
+            <button class="btn-pop-2">
+              <div class="box">
+                <div class="view">
+                  <video muted autoplay loop playsinline>
+                    <source src="./video/loop_b.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <span class="letter">Otio</span>
+              </div>
+            </button>
           </div>
         </section>
       </main>
